# libyuv

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/presets/: android-arm64-v8a.json  android-armeabi-v7a.json  common.json  ios-arm64-static.json  linux-clang64-static.json  macos-x86_64-static.json  win64-ninja-static.json  win64-vs2022-static.json
